// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/kingdom/model_provider.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of ModelProvider entities.
service ModelProviders {
  // Creates a new `ModelProvider`.
  rpc CreateModelProvider(ModelProvider) returns (ModelProvider);

  // Gets a `ModelProvider`.
  rpc GetModelProvider(GetModelProviderRequest) returns (ModelProvider);

  // Streams `ModelProvider`s.
  rpc StreamModelProviders(StreamModelProvidersRequest) returns (stream ModelProvider);
}

message GetModelProviderRequest {
  fixed64 external_model_provider_id = 1;
}

message StreamModelProvidersRequest {
  message AfterFilter {
    fixed64 external_model_provider_id = 1;
  }

  // Filter criteria as a conjunction of specified fields.
  message Filter {
    AfterFilter after = 1;
  }
  Filter filter = 1;

  // The maximum number of results to return. If not specified or 0, it implies
  // unlimited.
  int32 limit = 2;
}